--- a/index.html
+++ b/index.html
@@ -1,21 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="/style/global.css">
+    <link rel="stylesheet" href="/style/navbar.css">
+    <link rel="stylesheet" href="/style/footer.css">
+    <link rel="stylesheet" href="/style/index.css">
+    <title>Anuwat Thongkham</title>
 </head>
+
 <body>
+    <div class="navbarContainer">
+        <div class="navbarWrapper">
+            <a class="navbarLogo" href="/index.html" title="Logo"></a>
+            <div class="navbarLinkContainer">
+                <a href="" class="navbarLink">about</a>
+                <a href="" class="navbarLink">work</a>
+                <a href="" class="navbarLink">contact</a>
+            </div>
+        </div>
+    </div>
     <div class="container">
+        <div class="secondSection">
+            <div class="wrapper">
+                <div class="bioContainer">
+                    <div class="profileImage"></div>
+                    <div class="bioName">อนุวัฒน์ ทองคำ</div>
+                    <div class="bioStudentData">643020060-0 Section 1</div>
+                </div>
+            </div>
+        </div>
         <div class="wrapper">
-            <h1 class="header">วิชา SC310006  Mobile and Web Devlopment</h1>
+            <h1 class="header">วิชา SC310006 Mobile and Web Devlopment</h1>
+            <p class="qoute">*มีการลิงก์จากต่าง Repository กัน</p>
             <div class="link-container">
-                <ul>
-                    <li>แบบฝึกหัด</li>
-                    <li><a href="./public/work1.html">งานที่ 1</a></li>
-                </ul>
+                <ol class="link">
+                    <li ><a class="link-item" href="./public/work1.html">งานที่ 1 : เกมจับคู่ภาพโดย Jquery และ Bootstrap</a></li>
+                    <li ><a class="link-item" href="https://anuwat-thongkham.github.io/aframe01/">งานที่ 2 : VR Web 360</a></li>
+                    <li ><a class="link-item" href="./public/work3.html">งานที่ 3 : กมจับคู่ภาพ โดยใช้ VueJS</a></li>
+                    <li ><a class="link-item" href="https://anuwat-thongkham.github.io/work5/">งานที่ 5 React Native (FaceDetector)</a></li>
+                </ol>
+            </div>
+        </div>
+    </div>
+    <div class="footerSection">
+        <div class="footerWrapper">
+            <div class="footerPrimaryContainer">
+                <a href="/index.html" class="footerLogo" title="Logo"></a>
+            </div>
+            <div class="footerSecondaryContainer">
+                <div class="footerCoppyRight">©Anuwat</div>
+                <div class="socailMediaContainer">
+                    <a href="" class="socialMedia" title="Socail Media"></a>
+                    <a href="" class="socialMedia" title="Socail Media"></a>
+                    <a href="" class="socialMedia" title="Socail Media"></a>
+                </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
