--- a/public/work3.html
+++ b/public/work3.html
@@ -15,7 +15,7 @@
                         <template v-if="state==0">
                             <img style="margin: 16px 0;" src='work3/hi.svg' width="500" height="500" alt="Hi">
                             <v-btn @click="shuffle()" color="purple">START</v-btn>
-                            <router-link to="../index.html">
+                            <router-link to="../../index.html">
                                 <v-btn style="margin-left: 16px;" color="black">BACK</v-btn>
                               </router-link>
                         </template>
