--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/style/global.css" type="text/css">
-    <link rel="stylesheet" href="/style/navbar.css" type="text/css">
-    <link rel="stylesheet" href="/style/footer.css" type="text/css">
-    <link rel="stylesheet" href="/style/index.css" type="text/css">
+    <link rel="stylesheet" href="./style/global.css" type="text/css">
+    <link rel="stylesheet" href="./style/navbar.css" type="text/css">
+    <link rel="stylesheet" href="./style/footer.css" type="text/css">
+    <link rel="stylesheet" href="./style/index.css" type="text/css">
     <title>Anuwat Thongkham</title>
 </head>
 
