--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <li ><a class="link-item" href="https://anuwat-thongkham.github.io/aframe01/">งานที่ 2 : VR Web 360</a></li>
                     <li ><a class="link-item" href="./public/work3.html">งานที่ 3 : กมจับคู่ภาพ โดยใช้ VueJS</a></li>
                     <li ><a class="link-item" href="./public/work4.html">งานที่ 4 : กมจับคู่ภาพ โดยใช้ ReactJS</a></li>
-                    <li ><a class="link-item" href="https://anuwat-thongkham.github.io/work5/">งานที่ 5 React Native (FaceDetector)</a></li>
+                    <li ><a class="link-item" href="https://anuwat-thongkham.github.io/work5/">งานที่ 5 : React Native (FaceDetector)</a></li>
                 </ol>
             </div>
         </div>
