--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="wrapper">
-            <h1 class="header">วิชา SC310006 Mobile and Web Devlopment</h1>
+            <h1 class="header">วิชา SC310006 Mobile and Application Devlopment</h1>
             <p class="qoute">*มีการลิงก์จากต่าง Repository กัน</p>
             <div class="link-container">
                 <ol class="link">
