fix incorrect word

--- a/public/work1.html
+++ b/public/work1.html
@@ -106,7 +106,7 @@
             <div class="card-footer small"></div>
             <strong>Anuwat Thongkham</strong>
             <strong>643020060-0</strong><br>
-            Mobile and Web Devlopment<br>
+            Mobile and Web Application Devlopment<br>
             Department of Computer Science,
             College of Computing,
             Khon Kaen University
