--- a/public/work1.html
+++ b/public/work1.html
@@ -107,7 +107,7 @@
             <strong>Anuwat Thongkham</strong>
             <strong>643020060-0</strong><br>
             Mobile and Web Application Devlopment<br>
-            Department of Computer Science,
+            Computer Science,
             College of Computing,
             Khon Kaen University
         </div>
